# AnnicomScrobbler

./: .gitignore  AnnicomScrobbler.cabal  README.md  stack.yaml
doc/: Lib.md
doc/Services/: Getter.md  Logger.md  Preferences.md  Sender.md  Song.md  Store.md
src/: Lib.hs
src/Services/: Getter.hs  Logger.hs  Preferences.hs  Sender.hs  Song.hs  Store.hs
