name:                AnnicomScrobbler
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/SeTSeR/AnnicomScrobbler#readme
license:             BSD3
license-file:        LICENSE
author:              SeTSeR
maintainer:          sergey200018@bk.ru
copyright:           2017 SeTSeR
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5, dbus
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable Test-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Test
  default-language:    Haskell2010

test-suite Test-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Test
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/SeTSeR/AnnicomScrobbler
